# research

./: .gitignore  README.md  build-log.txt  build-log_2.txt  docker-compose.yml  lock  pyproject.toml  rust-toolchain.toml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml  post-create.sh
.github/workflows/: latex.yml  lint.yml
bench/: cli.py
bench/executors/: Dockerfile  agent.py  base.py
bench/graders/R0-LFD-001/: Dockerfile  grade.py
bench/graders/R1-SPN-002/: grade.py
bench/graders/R2-CSD-003/: Dockerfile  grade.py
bench/graders/R2-LNC-004/: grade.py
bench/graders/R3-TRV-005/: grade.py
bench/harness/: models.py  runner.py  sweep.py  validator.py
bench/models/: loader.py
bench/schema/: task.schema.json
bench/tasks/: R0-LFD-001.json  R1-SPN-002.json  R2-CSD-003.json  R2-LNC-004.json  R3-TRV-005.json
kernel/: Cargo.toml
kernel/aya/: Cargo.toml  build.rs
kernel/aya/.cargo/: config.toml
kernel/aya/lock-common/: Cargo.toml
kernel/aya/lock-common/src/: lib.rs
kernel/aya/lock-ebpf/: Cargo.toml
kernel/aya/lock-ebpf/.cargo/: config.toml
kernel/aya/lock-ebpf/src/: main.rs
kernel/aya/src/: main.rs
kernel/aya/xtask/: Cargo.toml
kernel/aya/xtask/src/: main.rs
kernel/cli-helper/: Cargo.toml
kernel/cli-helper/src/: main.rs
kernel/loader/: go.mod  go.sum  main.go
scripts/: build-images.sh  build-kernel.sh
