[project]
name = "research"
version = "0.1.0"
description = "S.O.C.K. (Self-replication Observatory & Containment Benchmark) and L.O.C.K. (Lightweight OS-level Cloning-prevention Kernel)"
authors = [
    {name = "Justin Chavarria", email = "jac21@albion.edu"},
    {name = "Rohan Raizada", email = "rohad.raizasa29@myhunter.cuny.edu"},
    {name = "Eyad Alhetairshi", email = "eyada@arizona.edu"}
]
requires-python = ">=3.10"
dependencies = [
    "typer[all]>=0.12.0",
    "pydantic>=2.7.0",
    "docker>=7.0.0",
    "rich>=13.7.0",
    "jsonschema>=4.22.0",
    "pyyaml>=6.0",
    "langchain>=0.1.0",
    "langchain-community>=0.1.0",
    "transformers>=4.36.0",
    "torch>=2.0.0",
]

[project.scripts]
sock = "bench.cli:app"

[project.urls]
Repository = "https://github.com/containmentlabs/research"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["bench", "kernel"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.black]
line-length = 120
target-version = ["py310"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true 