[package]
name = "lock"
version = "0.1.0"
edition = "2021"

[dependencies]
aya = { version = "0.12", features = ["async_tokio"] }
aya-log = "0.2"
clap = { version = "4.5", features = ["derive"] }
log = "0.4"
tokio = { version = "1.38", features = ["macros", "rt", "rt-multi-thread", "net", "signal"] }
bytes = "1"
env_logger = "0.11"
anyhow = "1.0"
lock-common = { path = "lock-common", features = ["user"] }

[build-dependencies]
aya = { version = "0.12", features = ["async_tokio"] }

[profile.release]
lto = true
panic = "abort"
codegen-units = 1
opt-level = 3
strip = false
overflow-checks = false

[workspace]
members = ["lock-common", "lock-ebpf", "xtask"] 