    [package] 
    name = "lock"
    version = "0.1.0"
    edition = "2021"
    publish = false

    [dependencies]
    aya = { version = "0.13.1", features = ["async_tokio"] }
    aya-log = "0.2"
    anyhow = "1"
    clap = { version = "4.5", features = ["derive"] }
    env_logger = "0.11"
    lock-common = { path = "lock-common", features = ["user"] }
    log = "0.4"
    tokio = { version = "1.21", features = ["macros", "rt-multi-thread", "net", "signal"] }
    bytes = "1"

    [build-dependencies]
    aya = "0.13.1"

    [profile.release]
    lto = true
    codegen-units = 1
    panic = "abort"

    [[bin]]
    name = "lock"
    path = "src/main.rs"
